refinement[TW20755]: Resolve Warnings From Problem Log
Change-Id: Ic81d81acdbcee6639885489a7e029457ec3bad39
Signed-off-by: Campanella (US), Zachary A <zachary.a.campanella@boeing.com>