@@ -27,7 +27,7 @@ import java.util.Vector;
  * <P>
  * <B>NOTE: </B>To enable benchmarking the JVM argument -Dosee.benchmark must be specified otherwise this code does
  * nothing
- * 
+ *
  * @author Ken J. Aguilar
  */
 public class Benchmark {
@@ -247,11 +247,11 @@ public class Benchmark {
 
       // Sorry Need to keep this java 1.4 compatible
       Object[] formatArgs = {
-         new Long(bm.getTotalSamples()),
-         new Float((float) bm.getLongestSample() / 1000),
-         new Float((float) bm.getShortestSample() / 1000),
-         new Float((float) bm.getAverage() / 1000),
-         new Long(bm.getExceedCount())};
+         Long.valueOf(bm.getTotalSamples()),
+         Float.valueOf((float) bm.getLongestSample() / 1000),
+         Float.valueOf((float) bm.getShortestSample() / 1000),
+         Float.valueOf((float) bm.getAverage() / 1000),
+         Long.valueOf(bm.getExceedCount())};
       MessageFormat outmessage = new MessageFormat(
          "total samples: {0,number,integer}, max time: {1,number,integer}ms, min: {2,number,integer}ms, average: {3,number,integer}ms, exceed count: {4,number,integer}");
 
@@ -262,8 +262,8 @@ public class Benchmark {
    @Override
    public String toString() {
       return String.format("%s\t total samples: %d,\t average: %fms,\t max time: %f, min: %fms, exceed count: %d", name,
-         new Long(getTotalSamples()), new Float(getLongestSample() / 1000), new Float(getShortestSample() / 1000),
-         new Float(getAverage() / 1000), new Long(getExceedCount()));
+         Long.valueOf(getTotalSamples()), Float.valueOf(getLongestSample() / 1000),
+         Float.valueOf(getShortestSample() / 1000), Float.valueOf(getAverage() / 1000), Long.valueOf(getExceedCount()));
    }
 
    public void addExceeder(String exceeder) {
