@@ -174,7 +174,7 @@ public class OutfileImportPage extends WizardDataTransferPage {
       Button button = new Button(parent, SWT.PUSH);
       button.setText(label);
       button.setFont(JFaceResources.getDialogFont());
-      button.setData(new Integer(id));
+      button.setData(Integer.valueOf(id));
       setButtonLayoutData(button);
       return button;
    }
